--- a/Part_1.qmd
+++ b/Part_1.qmd
@@ -489,7 +489,8 @@ casy_corrected_dilutions$counts_corrected <- casy$counts * (1/(casy_corrected_di
 
 casy_corrected_dilutions <- casy_corrected_dilutions |>
   left_join(experimental_set_up, by = "channel")
-#plot of all cells per channel
+
+#MC cells
 
 casy_corrected_dilutions_mc <- casy_corrected_dilutions |>
   filter(sample_type %in% 'MC')
@@ -502,9 +503,18 @@ casy_mc_summary <- casy_corrected_dilutions_mc |>
     .groups = "drop"
   )
 
-ggplot(casy_mc_summary, aes(x = as.factor(channel), y = mean_counts))+
-  geom_bar(stat = 'identity')+
+MC_cells <- ggplot(casy_mc_summary, aes(x = as.factor(channel), y = mean_counts))+
+  geom_bar(stat = 'identity', fill = 'darkgray')+
+  labs(
+    x = "Channel",
+    y = 'MC cells/mL'
+  )+
   theme_minimal()
+
+
+ggsave("MC_cells.png", plot = MC_cells, width = 7, height = 5, dpi = 300, units = "in")
+
+########abb_bbb cells
 
 casy_corrected_dilutions_bbb_abb <- casy_corrected_dilutions |>
   filter(sample_type %in% c('ABB','BBB'))
@@ -516,9 +526,23 @@ casy_bbb_abb_summary <- casy_corrected_dilutions_bbb_abb |>
     .groups = "drop"
   )
 
-ggplot(casy_bbb_abb_summary, aes(x = as.factor(channel), y = mean_counts, fill = sample_type))+
+abb_bbb_plot <- ggplot(casy_bbb_abb_summary, aes(x = as.factor(channel), y = mean_counts, fill = sample_type))+
+  scale_fill_manual(
+    values = c("ABB" = "lightpink3", "BBB" = "seagreen3")
+  ) +
+    labs(
+    x = "Channel",
+    y = 'Cells/mL',
+    fill = 'Sample type'
+  )+
   geom_bar(stat = 'identity', position = 'dodge')+
-  theme_minimal()
+  theme_minimal()+
+  theme(
+    legend.position = "right"
+  )
+
+ggsave("abb_bbb_plot.png", plot = abb_bbb_plot, width = 7, height = 5, dpi = 300, units = "in")
+
 
 #Calculate number of broken cells
 replicate_counts <- casy_corrected_dilutions_bbb_abb |>
@@ -541,9 +565,15 @@ broken_cells <- replicate_counts |>
   )
 
 
-ggplot(broken_cells, aes(x = as.factor(channel), y = mean_diff))+
-  geom_bar(stat = 'identity')
+broken_cells_plot <- ggplot(broken_cells, aes(x = as.factor(channel), y = mean_diff))+
+  geom_bar(stat = 'identity', fill = 'darkgray')+
+  labs(
+    x = "Channel",
+    y = 'Number of broken cells/mL'
+  )+
+  theme_minimal()
 
+ggsave("broken_cells_plot.png", plot = broken_cells_plot, width = 7, height = 5, dpi = 300, units = "in")
 
 lysis_efficiency <- casy_corrected_dilutions_bbb_abb |>
   select(channel, sample_type, counts_corrected, replicate) |>
@@ -561,8 +591,17 @@ lysis_efficiency <- casy_corrected_dilutions_bbb_abb |>
   )
 
 
-ggplot(lysis_efficiency, aes(x = as.factor(channel), y = lysis_efficiency))+
-  geom_bar(stat = 'identity')
+lysis_efficiency_plot <- ggplot(lysis_efficiency, aes(x = as.factor(channel), y = lysis_efficiency))+
+  geom_bar(stat = 'identity', fill = 'darkgray')+
+  labs(
+    x = "Channel",
+    y = 'Lysis efficiency (%)'
+  )+
+  theme_minimal()
+
+broken_and_efficiency <- plot_grid(broken_cells_plot,lysis_efficiency_plot, labels = c("A", "B"), ncol = 2)
+
+ggsave("broken_and_efficiency.png", plot = broken_and_efficiency, width = 7, height = 5, dpi = 300, units = "in")
 ```
 
 ```{r}
@@ -583,7 +622,7 @@ mol_mass_fragment = 670469.73 #g/mol
 initial_concentration <- initial_concentration * 10^(-9) * avogadro / mol_mass_fragment
 
 qpcr_standards_corrected$dna_conc <- 
-  (initial_concentration/qpcr_standards_corrected$dilution_factor)*(1/(qpcr_standards_corrected$template_vol/qpcr_standards_corrected$final_vol)) #this is in mol/ul
+  (initial_concentration/qpcr_standards_corrected$dilution_factor)*((qpcr_standards_corrected$template_vol/qpcr_standards_corrected$final_vol)) #this is in mol/ul
 
 
 ```
@@ -602,6 +641,7 @@ plot_qpcr_with_fit <- function(data, reps = c("1", "2", "3")) {
   model <- lm(Ct ~ log10(dna_conc), data = filtered_data)
   tidy_fit <- tidy(model)
   glance_fit <- glance(model)
+  
   
   #extraxt values
   slope <- tidy_fit$estimate[2]
@@ -622,7 +662,7 @@ plot_qpcr_with_fit <- function(data, reps = c("1", "2", "3")) {
   # Plot with all replicates colored
   plot <- ggplot(filtered_data, aes(x = log10(dna_conc), y = Ct, color = replicate)) +
     geom_point(size = 3) +
-    geom_smooth(method = "lm", se = FALSE, color = "black", linetype = "dashed") +
+    geom_smooth(method = "lm", se = TRUE, color = "black", linetype = "dashed", size = 1) +
     scale_color_manual(
       values = c("1" = "darkseagreen4", "2" = "darkorchid3", "3" = "orangered2"),
       drop = FALSE
@@ -631,9 +671,14 @@ plot_qpcr_with_fit <- function(data, reps = c("1", "2", "3")) {
       x = expression(Log[10]~DNA~concentration~(mol/µL)),
       y = "Ct value",
       color = "Replicate",
-      title = paste("qPCR Standard Curve — Reps:", paste(reps, collapse = ", "))
+      title = paste("Replicates used:", paste(reps, collapse = ", "))
     ) +
-    theme_minimal()
+    theme_minimal()+
+  theme(
+    plot.title = element_text(size = 15),
+    axis.title = element_text(size = 12),
+    legend.position = "bottom"
+  )
   
   return(list(
     plot = plot,
@@ -673,10 +718,24 @@ summarize_qpcr_combinations <- function(data) {
   ))
 }
 
-
 qpcr_summary_std <- summarize_qpcr_combinations(qpcr_standards_corrected)
 qpcr_summary_std$stats
-qpcr_summary_std$plots
+qpcr_plots_curves <- qpcr_summary_std$plots
+
+qpcr_plots_curves
+
+for (i in seq_along(qpcr_plots_curves)) {
+  plot <- qpcr_plots_curves[[i]]
+  filename <- paste0("qpcr_plots/qpcr_plot_", i, ".png")
+  
+  ggsave(
+    filename,
+    plot = plot,
+    width = 7, height = 5,
+    dpi = 300, units = "in"
+  )
+}
+
 
 r2_summary <- ggplot(qpcr_summary_std$stats, aes(x = replicates_used, y = R2))+
   geom_point(color = 'midnightblue')+
@@ -719,8 +778,9 @@ slopes_summary <- ggplot(qpcr_summary_std$stats, aes(x = replicates_used, y = sl
     y = 'Slope'
   )
 
-plot_grid(r2_summary,efficiency_summary, slopes_summary, labels = c("A", "B", "C"), ncol = 3)
+qpcr_summary_plot <- plot_grid(r2_summary,efficiency_summary, slopes_summary, labels = c("A", "B", "C"), ncol = 3)
 
+ggsave("qpcr_summary_plot.png", plot = qpcr_summary_plot, width = 7, height = 4, dpi = 300, units = "in")
 
 ```
 
@@ -734,37 +794,50 @@ geom_boxplot()
 #Dna conc calculation in sample
 slope <- qpcr_summary_std$stats$slope[1]
 intercept <- qpcr_summary_std$stats$intercept[1]
-qpcr_samples$dna_conc <- 10^((qpcr_samples$Ct-intercept)/slope)*qpcr_samples$final_vol/qpcr_samples$template_vol*qpcr_samples$dilution_factor #get ct, minus intercept, divide by slope. all of that power of 10 to remove log. then corret for sampling volume and dilution factor.
+qpcr_samples$dna_conc <- 10^((qpcr_samples$Ct-intercept)/slope)*qpcr_samples$final_vol/qpcr_samples$template_vol*qpcr_samples$dilution_factor*2 #get ct, minus intercept, divide by slope. all of that power of 10 to remove log. then corret for sampling volume and dilution factor.
 
 
 
-ggplot(qpcr_samples, aes(x = as.factor(channel), y = dna_conc)) +
+dna_conc_plot <- ggplot(qpcr_samples, aes(x = as.factor(channel), y = dna_conc)) +
   geom_boxplot() +
   geom_point(aes(colour = as.factor(dilution_factor)), position = position_jitter(width = 0.2), size = 2) +
   labs(x = "Channel", y = "DNA concentration (mol/µL)", colour = "Dilution factor") +
   theme_minimal()
 
+ggsave("dna_conc_plot.png", plot = dna_conc_plot, width = 7, height = 5, dpi = 300, units = "in")
 
 ploidy_results <- qpcr_samples |> 
   select(channel, dna_conc) |>
   left_join(experimental_set_up, by = "channel") |>
   left_join(broken_cells |> select(channel, mean_diff, sd_diff), by = "channel")
 
-ploidy_results$dna_conc_frag_ml <-  ploidy_results$dna_conc *1000 #change to mol/ml
+ploidy_results$dna_conc_frag_ml <-  ploidy_results$dna_conc*1000 #change to mol/ml
 
-ploidy_results$ploidy_estimation <- ploidy_results$dna_conc/ploidy_results$mean_diff #divide by nb of 'broken' cells
+ploidy_results$ploidy_estimation <- ploidy_results$dna_conc_frag_ml/ploidy_results$mean_diff #divide by nb of 'broken' cells
 
 ploidy_summary <- ploidy_results |>
   group_by(phosphate_mM) |>
   summarise(
     mean_ploidy = mean(ploidy_estimation),
+    sd_ploidy = sd(ploidy_estimation),
+    n = n(),
     .groups = "drop"
+  ) |>
+  mutate(
+    ci95 = 1.96 * sd_ploidy / sqrt(n)
   )
 
-ggplot(ploidy_summary, aes(x = as.factor(phosphate_mM), y = mean_ploidy, fill = as.factor(phosphate_mM))) +
+ploidy_plot <- ggplot(ploidy_summary, aes(x = as.factor(phosphate_mM), y = mean_ploidy, fill = as.factor(phosphate_mM))) +
+  scale_fill_manual(values = c("0.0115" = "goldenrod2", "0.23" = "cornflowerblue"))+
   geom_bar(stat = 'identity') +
-  labs(x = "Phosphate (mM)", y = "Mean ploidy estimation") +
-  theme_minimal()
+  geom_errorbar(aes(ymin = mean_ploidy - ci95, ymax = mean_ploidy + ci95), width = 0.2) +
+  labs(x = "Phosphate (mM)", y = "chr/cell") +
+  theme_minimal()+
+  theme(
+    legend.position = 'none'
+  )
+
+ggsave("ploidy_plot.png", plot = ploidy_plot, width = 7, height = 5, dpi = 300, units = "in")
 ```
 
 ```         
@@ -772,4 +845,161 @@ TACAGGTTACTGGTCGCTCTCCCCAACAGGGCAAAGGTAAGTCAGCAGCAACTTGGTGCTTAACCCTAGA
 AGGTTTGAGTCCGGGGCAATGGCGACCCCTGACCCCTTGGGAAGAAAATTTTTGCCAGCAACTCTTAACG
 GGAAATCCCAATGGTCCCTGGCAGAAAAAATTTGGCGATCGCCGTTGATCAAGGCTCCCTCCCCCCAGGG
 CATTAAAATAGGAACAGTTGCCGAACTCCCTATCAAGCCGAATCATTAATC
+```
+
+```{r}
+library(slider)
+
+
+slope_threshold <- 0.001 #from what value do we consider 'positive'
+window_n <- 6   #nb of time points to use in each rolling regression
+required_consecutive <- 3 #how many slopes in a row should be positive to consider start of exp phase
+
+growth_fits <- turbidostat |>
+  group_by(channel, decision) |>
+  arrange(time_h) |> #just in case the time column is not ordered 
+  group_split() |> #split ech channel/decision into smaller df
+  map_dfr(function(df) {#go over each of the df we have for each channel/decision
+    slopes <- slide_index_dbl(
+      .x = df,
+      .i = seq_len(nrow(df)), #row numbers
+      .f = ~ {
+        if (nrow(.x) < window_n) return(NA) #if we are at the start, we have no previous 4 points,this gives error so check first.
+        fit <- lm(log(OD) ~ time_h, data = .x) #fitting
+        coef(fit)[2] #get slope
+      },
+      .before = window_n - 1,
+      .complete = TRUE
+    )
+
+    df$rolling_slope <- slopes
+
+    is_positive <- slopes > slope_threshold #chec if slope is positive
+    is_positive[is.na(is_positive)] <- FALSE #store result
+
+    #Use sliding sum to check for consecutive positivs
+    check_consecutive <- slider::slide_dbl(is_positive, sum, .before = 0, .after = required_consecutive - 1) #is this, and the next 2 positive? store result of conseq positives
+
+    # Find the first timepoint where required number of consecutive positives occur
+    start_idx <- which(check_consecutive >= required_consecutive)[1]
+    if (is.na(start_idx)) return(NULL) #if the conseq are more than the required this is the starting point of the exponential phase
+
+    exp_phase <- df |> slice(start_idx:n()) #grab the values that are after the starting point
+#then just fit as always!!!!
+    fit <- lm(log(OD) ~ time_h, data = exp_phase)
+    coef <- coef(fit)
+    r2 <- summary(fit)$r.squared
+
+    tibble(
+      channel = df$channel[1],
+      decision = df$decision[1],
+      start_time = df$time_h[start_idx],
+      slope = coef[2],
+      intercept = coef[1],
+      r_squared = r2
+    )
+  })
+
+
+plot_OD_fits_with_exp_start <- function(data, fits, threshold = 0.35) {
+  channels <- unique(data$channel)
+
+  plots <- lapply(seq_along(channels), function(i) {
+    ch <- channels[i]
+    subset_data <- data |>
+      filter(channel == ch) |>
+      arrange(time_h) |>
+      mutate(highlight = lead(decision, default = last(decision)) != decision)
+
+    #get exp fits for channel
+    fit_lines <- fits |> filter(channel == ch)
+
+    phosphate <- as.character(subset_data$phosphate_mM[1])
+
+    show_x <- i %in% c(4, 5, 6)  #only for prettier plot
+    show_y <- i %in% c(1, 4)     
+    
+    subset_data <- subset_data |>
+  left_join(fits |> filter(channel == ch), by = "decision") |>
+  mutate(
+    phase = case_when(
+      time_h < start_time ~ "pre_exp",
+      TRUE ~ as.character(highlight)  # "TRUE" or "FALSE"
+    )
+  )
+
+# Set custom colors
+color_vals <- c(
+  "pre_exp" = "gray70",
+  "FALSE" = "dodgerblue2",  # pump off
+  "TRUE" = "darkorange1"    # pump on
+)
+
+label_vals <- c(
+  "pre_exp" = "Pre-exp",
+  "FALSE" = "Pump off",
+  "TRUE" = "Pump on"
+)
+
+# Plot
+p <- ggplot(subset_data, aes(x = time_h, y = log(OD), color = phase)) +
+  geom_point(size = 0.8) +
+  scale_color_manual(values = color_vals, labels = label_vals, drop = FALSE) +
+  labs(
+    x = if (show_x) "Time (h)" else NULL,
+    y = if (show_y) expression(ln(OD[720])) else NULL,
+    color = "Phase",
+    title = paste0("Channel ", ch, " - ", phosphate, " mM")
+  ) +
+  theme_minimal() +
+  theme(
+    plot.title = element_text(face = "bold", hjust = 0.5, size = 12),
+    text = element_text(size = 11),
+    axis.title.x = element_text(size = 11),
+    axis.title.y = element_text(size = 11),
+    legend.position = if (i == 1) "bottom" else "none",
+    axis.text.x = element_text(size = 11),
+    axis.text.y = element_text(size = 11)
+  )
+
+# Vertical line at start of exp phase
+if (nrow(fit_lines) > 0) {
+  p <- p + geom_vline(data = fit_lines, aes(xintercept = start_time),
+                      linetype = "dotted", color = "black", linewidth = 0.5)
+}
+
+# Add real exponential phase fits
+for (j in seq_len(nrow(fit_lines))) {
+  f <- fit_lines[j, ]
+exp_data <- subset_data |> 
+  filter(decision == f$decision, time_h >= f$start_time) |>
+  mutate(fitted = f$intercept + f$slope * time_h)
+
+p <- p + geom_line(
+  data = exp_data,
+  aes(x = time_h, y = fitted),
+  inherit.aes = FALSE,
+  color = "black",
+  linewidth = 0.7,
+  linetype = "dashed"
+)
+}
+    return(p)
+  })
+
+  return(plots)
+}
+
+
+OD_plots_exp <- plot_OD_fits_with_exp_start(turbidostat, growth_fits)
+
+final_OD_plot_exp <- (OD_plots_exp[[1]] + OD_plots_exp[[2]] + OD_plots_exp[[3]]) /
+                     (OD_plots_exp[[4]] + OD_plots_exp[[5]] + OD_plots_exp[[6]]) +
+                     plot_layout(guides = "collect") &
+                     theme(legend.position = "bottom")
+
+final_OD_plot_exp
+suppressMessages(print(final_OD_plot_exp))
+ggsave("final_lnOD_plot_with_exp_start.png", plot = final_OD_plot_exp, width = 7, height = 5, dpi = 300, units = "in")
+
 ```
