--- a/Part_1.qmd
+++ b/Part_1.qmd
@@ -844,12 +844,10 @@ anova_ploidy <- aov(ploidy_estimation ~ factor(phosphate_mM), data = ploidy_resu
 summary(anova_ploidy)
 ```
 
-```         
-TACAGGTTACTGGTCGCTCTCCCCAACAGGGCAAAGGTAAGTCAGCAGCAACTTGGTGCTTAACCCTAGA
-AGGTTTGAGTCCGGGGCAATGGCGACCCCTGACCCCTTGGGAAGAAAATTTTTGCCAGCAACTCTTAACG
-GGAAATCCCAATGGTCCCTGGCAGAAAAAATTTGGCGATCGCCGTTGATCAAGGCTCCCTCCCCCCAGGG
-CATTAAAATAGGAACAGTTGCCGAACTCCCTATCAAGCCGAATCATTAATC
-```
+    TACAGGTTACTGGTCGCTCTCCCCAACAGGGCAAAGGTAAGTCAGCAGCAACTTGGTGCTTAACCCTAGA
+    AGGTTTGAGTCCGGGGCAATGGCGACCCCTGACCCCTTGGGAAGAAAATTTTTGCCAGCAACTCTTAACG
+    GGAAATCCCAATGGTCCCTGGCAGAAAAAATTTGGCGATCGCCGTTGATCAAGGCTCCCTCCCCCCAGGG
+    CATTAAAATAGGAACAGTTGCCGAACTCCCTATCAAGCCGAATCATTAATC
 
 ```{r}
 library(slider)
@@ -1195,7 +1193,9 @@ sum(is.na(proteomics$avg_ratio))
 
 #Filter out the rows that are all na
 proteomics_clean <- proteomics |>
-  filter(!(is.na(log_ratio_1) & is.na(log_ratio_2) & is.na(log_ratio_3)))
+  filter(!(is.na(log_ratio_1) & is.na(log_ratio_2) & is.na(log_ratio_3)))|>
+
+
 
 sum(is.na(proteomics_clean$avg_ratio))
 
@@ -1250,6 +1250,8 @@ ggplot(proteomics_long, aes(x = protein, y = sd_ratio)) +
 
 
 proteomics_clean <- proteomics_clean |>
+  # Remove proteins with sd higher then 2 (Can be removed)
+  filter(sd_ratio <= 2)|> 
   mutate(
     significant = case_when(
       avg_ratio < -0.5  ~ "downregulated",
